<resources>
    <string name="app_name">SwapData Kominfo</string>
    <string name="title_exit">Keluar Form</string>
    <string name="title_pertanyaan">Keluar Pertanyaan</string>
    <string name="exit_form">Apakah anda yakin ingin keluar dari pengisian form pengajuan ?</string>
    <string name="exit_pertanyaan">Apakah anda yakin ingin keluar dari pengisian form pertanyaan ?</string>
    <string name="title_main">Keluar Dari Aplikasi</string>
    <string name="exit_main">Apakah anda yakin ingin keluar dari Aplikasi ?</string>
    <string name="exit">Keluar</string>
    <string name="close">Tidak</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email Address</string>
    <string name="registrasi">Registrasi</string>
    <string name="logout">LogOut</string>
    <string name="menu">MENU</string>
    <string name="resume_logo">Resume logo</string>
    <string name="form_pengajuan">Form Pengajuan</string>
    <string name="report_logo">Report Logo</string>
    <string name="monitor_pengajuan_form">Monitoring Pengajuan</string>
    <string name="tabel_monitoring_website_resmi">Monitoring website Resmi</string>
    <string name="logo_monitor_web_resmi">Logo monitor web resmi</string>
    <string name="logo_monitoring_aplikasi_resmi">Logo monitoring aplikasi resmi</string>
    <string name="tabel_monitoring_aplikasi_resmi">Monitoring Aplikasi Resmi</string>
    <string name="logo_monitor_aplikasi_luar_serever">Logo monitor aplikasi luar serever</string>
    <string name="tabel_monitor_aplikasi_resmi_di_luar_server_kominfo">Monitor Aplikasi Resmi di Luar Server</string>
    <string name="logo_progress_pengembangan">Logo progress pengembangan</string>
    <string name="tabel_monitor_progress_pengembangan_aplikasi_yang_dikelola_kominfo">Monitoring Progress Pengembangan Aplikasi</string>
    <string name="logo_form_pertanyaan">Logo form pertanyaan</string>
    <string name="form_pertanyaan">Pertanyaan</string>
    <string name="back_button">Back button</string>
    <string name="monitoring_pembuatan_aplikasi">MONITORING PEMBUATAN APLIKASI</string>
    <string name="sebelumnya">sebelumnya</string>
    <string name="selanjutnya">selanjutnya</string>
    <string name="halaman">Halaman</string>
    <string name="monitoring_aplikasi_luar">MONITORING APLIKASI LUAR</string>
    <string name="monitoring_aplikasi_resmi">MONITORING APLIKASI RESMI</string>
    <string name="tanggal_surat_detail">Tanggal Surat :</string>
    <string name="wajib_memasukan_tanggal_surat">*Wajib memasukan tanggal surat</string>
    <string name="upload_file">upload file</string>
    <string name="nama_file">Nama File :</string>
    <string name="upload_file_berupa_pdf">*upload file berupa PDF</string>
    <string name="nama_sub_domain_yang_diminta">Nama Sub Domain Yang Diminta</string>
    <string name="nama_judul_website_aplikasi_yang_diajukan">Nama/Judul Website/Aplikasi yang diajukan</string>
    <string name="deskripsi_keterangan_mengenai_website_aplikasi_yang_diajukan">Deskripsi/Keterangan mengenai Website/Aplikasi yang diajukan</string>
    <string name="berikan_spesifikasi_hosting_yang_diinginkan">Berikan spesifikasi hosting yang diinginkan</string>
    <string name="nama_layanan_hosting_yang_dipakai">Nama layanan hosting yang dipakai</string>
    <string name="nama_domain_sendiri">Nama Domain Sendiri</string>
    <string name="spek_web_app">Spek Web/App</string>
    <string name="no_hp_wa">No HP/WA</string>
    <string name="form_pertanyaan_dan_kontak">FORM PERTANYAAN DAN KONTAK</string>
    <string name="logo_whatsapp">logo whatsapp</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="logo_gmail">logo gmail</string>
    <string name="pertanyaaan">Pertanyaaan</string>
    <string name="kirim">Kirim</string>
    <string name="registrasi_caps">REGISTRASI</string>
    <string name="password">Password</string>
    <string name="logo_top">logo top</string>
    <string name="logo_bottom">logo bottom</string>
    <string name="status_pengajuan">STATUS PENGAJUAN</string>
    <string name="status_website">STATUS WEBSITE</string>
    <string name="data_anda_berhasil_terkirim">Data anda berhasil terkirim</string>
    <string name="tutup">tutup</string>
    <string name="login_anda_berhasil">Login anda berhasil</string>
    <string name="registrasi_anda_berhasil">Registrasi anda berhasil</string>
    <string name="spesifikasi_hosting">Spesifikasi Hosting</string>
    <string name="update_terakhir">Update Terakhir</string>
    <string name="versi_mobile">Versi Mobile</string>
    <string name="tanggal_pencatatan_progress">Tanggal Pencatatan Progress</string>
    <string name="nama_web_aplikasi">Nama Web/Aplikasi</string>
    <string name="deskripsi_web_aplikasi">Deskripsi Web/Aplikasi</string>
    <string name="spesifikasi_website">Spesifikasi Website</string>
    <string name="data_dukung">Data Dukung</string>
    <string name="tanggal_waktu_pengajuan_form">Tanggal/Waktu Pengajuan Form</string>
    <string name="nama_perangkat">Nama Perangkat</string>
    <string name="kategori_perangkat_daerah">Kategori Perangkat Daerah</string>
    <string name="jenis_permohonan">Jenis Permohonan</string>
    <string name="nomor_surat">Nomor Surat</string>
    <string name="tanggal_surat">Tanggal Surat</string>
    <string name="file_surat">File Surat</string>
    <string name="nama_judul_website_aplikasi">Nama/Judul Website/Aplikasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="spesfikasi_hosting">Spesfikasi Hosting</string>
    <string name="hosting">Hosting</string>
    <string name="domain">Domain</string>
    <string name="ip_address">IP Address</string>
    <string name="metode">Metode</string>
    <string name="spesifikasi_web_aplikasi">Spesifikasi Web/Aplikasi</string>
    <string name="nama">Nama</string>
    <string name="nomor_hp_wa">Nomor HP/WA</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="no">No.</string>
    <string name="tanggal_monitoring">Tanggal Monitoring</string>
    <string name="nama_perangkat_daerah">Nama Perangkat Daerah</string>
    <string name="kategori_instansi">Kategori Instansi</string>
    <string name="nama_sub_domain">Nama Sub Domain</string>
    <string name="keterangan">Keterangan</string>
    <string name="update_terakhir_berita_artikel">Update Terakhir (Berita/Artikel)</string>
    <string name="logo">Logo</string>
    <string name="profil">Profil</string>
    <string name="prioritas">Prioritas</string>
    <string name="info_layanan_publik">Info Layanan Publik</string>
    <string name="produk_hukum">Produk Hukum</string>
    <string name="info_program_dan_kegiatan">Info Program dan Kegiatan</string>
    <string name="layanan_aspirasi">Layanan Aspirasi</string>
    <string name="kontak">Kontak</string>
    <string name="catatan">Catatan</string>
    <string name="pertanyaan_anda_berhasil_terkirim">Pertanyaan anda berhasil terkirim</string>
    <string name="title_activity_chart_pengajuan">ChartPengajuan</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>