<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_tanggal_monitor"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/tanggal_monitoring"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_nama_perangkat"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/nama_perangkat_daerah"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_kategori_instansi"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/kategori_instansi"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_nama_subdomain"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/nama_sub_domain"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_keterangan"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/keterangan"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_update"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/update_terakhir_berita_artikel"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/logo"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_profil"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/profil"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_prioritas"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/prioritas"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_layanan_publik"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/info_layanan_publik"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_produk_hukum"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/produk_hukum"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_program_kegiatan"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/info_program_dan_kegiatan"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_layanan_aspirasi"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/layanan_aspirasi"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_kontak"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/kontak"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_catatan"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/catatan"
        android:textSize="18sp"/>
</LinearLayout>